# piiswap

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  USERGUIDE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/piiswap/: __init__.py  __main__.py  cli.py
src/piiswap/adapters/: __init__.py  base.py  csv_adapter.py  docx.py  evtx.py  pcap.py  pdf.py  plaintext.py  sqlite_adapter.py  xlsx.py
src/piiswap/core/: allowlist.py  detector.py  engine.py  replacer.py  resolver.py  tokenizer.py
src/piiswap/data/: be_firstnames.csv  be_lastnames.csv  be_streets.csv  firstnames.csv  lastnames.csv
src/piiswap/detectors/: address.py  apikey.py  base.py  credential.py  email.py  fieldlabel.py  filepath.py  hostname.py  iban.py  name.py  phone.py  snapchat.py  social.py  username.py
src/piiswap/store/: database.py  encryption.py
src/piiswap/templates/: __init__.py
tests/e2e/evidence/: crypto_exchange_kyc.json  email_headers.eml  isp_connection_log.csv  microsoft_signin.csv  snapchat_account.json  social_media_osint.md
tests/e2e/iocs/: known_iocs.txt
tests/e2e/llm_output/: analysis_report.md
tests/fixtures/: sample_config.php  sample_db.sql  sample_log.txt
tests/test_core/: test_allowlist.py  test_engine.py
tests/test_detectors/: test_email.py  test_fieldlabel.py  test_phone.py  test_social.py
